upgrade dependencies, lock on selenium v2.53.1, upgrade docker-compose config to v2, address selenium grid bug

--- a/bin/build
+++ b/bin/build
@@ -1,5 +1,5 @@
 #!/bin/bash
 
-# Builds the rspec docker image
+# Builds the testrunner docker image for rspec and capybara
 
-docker-compose build rspec
+docker-compose build --pull testrunner
