--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,55 +1,71 @@
-web:
-  image: mycargus/hello-docker-world:latest
-  environment:
-    VIRTUAL_HOST: app.under.test
+version: '2'
 
-rspec:
-  build: .
-  dockerfile: Dockerfile
-  environment:
-    APP_HOST: app.under.test
-    HUB_HOST: selenium.hub.docker
-  volumes:
-    - .:/usr/src/app
-  links:
-    - web
-    - hub
+services:
 
-hub:
-  image: selenium/hub:2.52.0
-  environment:
-    VIRTUAL_HOST: selenium.hub.docker
-  ports:
-    - 4444:4444
+  web:
+    image: mycargus/hello_docker_world:latest
+    environment:
+      VIRTUAL_HOST: hello.docker
 
-node-firefox:
-  image: selenium/node-firefox:2.52.0
-  environment:
-    VIRTUAL_HOST: selenium.firefox.docker
-  links:
-    - hub
+  testrunner:
+    build:
+      context: .
+    environment:
+      APP_HOST: hello.docker
+      HUB_HOST: selenium.hub.docker
+    volumes:
+      - .:/usr/src/app
+    links:
+      - web
+      - hub
 
-node-chrome:
-  image: selenium/node-chrome:2.52.0
-  environment:
-    VIRTUAL_HOST: selenium.chrome.docker
-  links:
-    - hub
+  hub:
+    image: selenium/hub:2.53.1
+    environment:
+      VIRTUAL_HOST: selenium.hub.docker
+    ports:
+      - "4444:4444"
 
-node-chrome-debug:
-  image: selenium/node-chrome-debug:2.52.0
-  environment:
-    VIRTUAL_HOST: selenium.debug.chrome.docker
-  ports:
-    - 5900:5900
-  links:
-    - hub
+  node-firefox:
+    image: selenium/node-firefox:2.53.1
+    environment:
+      # this is a necessary workaround due to a known bug
+      # https://github.com/SeleniumHQ/docker-selenium/issues/133
+      HUB_PORT_4444_TCP_ADDR: hub
+    links:
+      - hub
+      - web
 
-node-firefox-debug:
-  image: selenium/node-firefox-debug:2.52.0
-  environment:
-    VIRTUAL_HOST: selenium.debug.firefox.docker
-  ports:
-    - 5901:5900
-  links:
-    - hub
+  node-chrome:
+    image: selenium/node-chrome:2.53.1
+    environment:
+      # this is a necessary workaround due to a known bug
+      # https://github.com/SeleniumHQ/docker-selenium/issues/133
+      HUB_PORT_4444_TCP_ADDR: hub
+    links:
+      - hub
+      - web
+
+  node-chrome-debug:
+    image: selenium/node-chrome-debug:2.53.1
+    environment:
+      # this is a necessary workaround due to a known bug
+      # https://github.com/SeleniumHQ/docker-selenium/issues/133
+      HUB_PORT_4444_TCP_ADDR: hub
+    ports:
+      - "5900:5900"
+    links:
+      - hub
+      - web
+
+  node-firefox-debug:
+    image: selenium/node-firefox-debug:2.53.1
+    environment:
+      # this is a necessary workaround due to a known bug
+      # https://github.com/SeleniumHQ/docker-selenium/issues/133
+      HUB_PORT_4444_TCP_ADDR: hub
+    ports:
+      - "5901:5900"
+    links:
+      - hub
+      - web
